# arc2040podule

./: 2040podule.h  CMakeLists.txt  README.md  arc_pipe_podule.c  hw.h  payload.S  pipe_packet.c  pipe_packet.h  podule_interface.c  podule_interface.h  podule_regs.h  test_conns.c  tusb_config.h  usb_descriptors.c  utils.c  utils.h  version.h
loader/: Makefile  loader.S
mod_pipe/: Makefile  commands.S  commands_rawfile.S  module.S  module.h  pipe_packet.S  riscos_defs.h  utils.S
server/: Makefile  channel_rawfile.c  channels.h  main.c
tools/: mk_chunk_dir.py
